# checktick

./: .dockerignore  .env.example  .env.selfhost  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.registry  QUESTION_GROUP_PUBLISHING_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.external-db.yml  docker-compose.prod-test.yml  docker-compose.registry.yml  docker-compose.yml  package.json  pyproject.toml  pytest-a11y-report.xml  pytest.ini  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml  custom_template_request.yml  dataset_request.yml  documentation.yml  feature_request.yml  nhs_dd_dataset_request.yml  question.yml  question_group_template_request.yml  security.yml
.github/workflows/: ci.yml  docker-publish.yml  security.yml  update-cdn-libraries.yml  update-paddle-js.yml
checktick/tests/: test_llm_prompt_loading.py
checktick_app/: context_processors.py  settings.py
checktick_app/api/: urls.py  views.py
checktick_app/api/tests/: test_dataset_api.py  test_dataset_sharing.py  test_publish_and_metrics_api.py  test_question_group_templates_api.py  test_tier_enforcement_api.py
checktick_app/core/: admin.py  billing.py  context_processors.py  decorators.py  email_utils.py  middleware.py  models.py  password_validators.py  qr_utils.py  signals.py  themes.py  tier_limits.py  urls.py  views.py  views_2fa.py  views_billing.py  views_docs.py  views_platform_admin.py
checktick_app/core/migrations/: 0010_add_user_profile.py  0011_create_profiles_for_existing_users.py  0012_team_org_invitations.py  0014_add_payment_model.py
checktick_app/core/services/: hosting.py
checktick_app/core/tests/: test_branding.py  test_password_reset_flow.py  test_tier_enforcement.py  test_tier_patient_data.py  test_user_profile.py
checktick_app/static/css/: daisyui_themes.css  nhsuk-frontend.min.css
checktick_app/static/fonts/: COPYRIGHT.txt  din-round-pro.css  din.css
checktick_app/static/icons/: checktick_brand_favicon_.html
checktick_app/static/js/: admin-theme.js  (+14 more)
checktick_app/surveys/: admin.py  branching.py  decorators.py  email_utils.py  external_datasets.py  forms.py  llm_client.py  models.py  permissions.py  shamir.py  urls.py  vault_client.py  views.py  views_data_governance.py  views_organisation_billing.py
checktick_app/templates/: 403_lockout.html  base.html  base_minimal.html
docs/: FOLLOWUP_FEATURE_SUMMARY.md  README.md  accessibility.md  account-tiers-implementation.md  adding-external-datasets.md  ai-survey-generator.md  api-datasets.md  api.md  audit-logging-and-notifications.md  authentication-and-permissions.md  billing-and-subscriptions.md  branching-and-repeats.md  branching-technical.md  branding-and-theme-settings.md  business-continuity.md  cdn-libraries.md  collections.md  data-governance-export.md  data-governance-implementation.md  data-governance-overview.md  data-governance-policy.md  data-governance-retention.md  data-governance-security.md  data-governance-special-cases.md  data-governance.md  dataset-sharing-and-customization.md  datasets-and-dropdowns.md  datasets-features.md  datasets.md  documentation-system.md  email-notifications.md  encryption-for-users.md  encryption-individual-users.md  encryption-organisation-users.md  encryption-quick-reference.md  encryption-technical-reference.md  encryption.md  environment-variables-migration-plan.md  getting-help.md  getting-started-account-types.md  (+42 more)
docs/compliance/: access-audit-logs.md  access-control.md  annual-compliance-checklist-2026.md  annual-disaster-recovery-drill.md  annual-security-validation-procedure.md  antivirus-policy.md  asset-register.md  atp-sovereign-monitoring.md  automation-overview.md  backup-isolation-procedure.md  backup-log.md  backup-policy.md  board-security-report-jan.md  board-suite-minutes-dpst.md  business-continuity-plan.md  business-impact-assessment.md  caldicott-statement.md  central-management-statement.md  change-management-policy.md  cloud-responsibility-matrix.md  consent-policy.md  continuous-patching-lifecycle.md  contract-compliance-review.md  data-flow-mapping.md  data-policy.md  data-quality-and-integrity.md  data-rights-request-tracker.md  data-subject-request-procedure.md  dns-filtering-standard.md  dpia-procedure.md  dpia-survey-platform.md  email-security.md  emergency-contact-sheet.md  encryption-transit.md  endpoint-software-policy.md  enhanced-acceptable-use-policy.md  exercise-action-log.md  exercise-summary-2025.md  external-service-authentication.md  hardware-assets.md  (+51 more)
docs/question-group-templates/: question-group-templates-phq9.md
locale/: README.md
s/: dev  test  unseal-platform-key
tests/: test_accessibility.py  test_api_access_controls.py  test_api_questions_and_groups.py  test_authenticated_invitations.py  test_billing.py  test_export_encryption.py  test_invites_workflow.py  test_nhs_number_validation.py  test_organisation_checkout.py  test_organization_encryption.py  test_password_validators.py  test_platform_admin_permissions.py  test_publication_security.py  test_publication_workflows.py  test_qr_code.py  test_question_group_publishing.py  test_question_group_publishing.py.old  test_secure_deletion.py  test_survey_permissions.py  test_survey_translation.py  test_team_models.py  test_team_permissions.py  test_theme_system.py  test_token_security.py  test_user.py  test_user_api.py
vault/: README.md  setup_vault.py  unseal_vault.sh
(+163 files in other folders)
