[tool.poetry]
name = "checktick"
version = "0.1.0"
description = "Secure, server-rendered survey platform for medical audit and research"
authors = ["CheckTick Maintainers <simon@eatyourpeas.co.uk>"]
readme = "README.md"
packages = [
    { include = "checktick_app" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^5.1"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
jinja2 = "^3.1.4"
django-cors-headers = "^4.4.0"
whitenoise = "^6.7.0"
django-axes = "^6.5.0"
django-ratelimit = "^4.1.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
cryptography = "^43.0.1"
itsdangerous = "^2.2.0"
pyyaml = "^6.0.2"
nhs-number = "^1.3.6"
djangorestframework = "^3.15.2"
django-csp = "^3.8"
gunicorn = "^22.0.0"
djangorestframework-simplejwt = "^5.3.1"
markdown = "^3.6"
pygments = "^2.18.0"
inflection = "^0.5.1"
uritemplate = "^4.1.1"
ggshield = "^1.43.0"
mozilla-django-oidc = "^4.0.1"
beautifulsoup4 = "^4.12.0"
requests = "^2.32.0"
hvac = "^2.4.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.4"}
pre-commit = "^4.3.0"
ggshield = "^1.43.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Align isort with Black for consistent formatting locally and in CI
profile = "black"
line_length = 88
combine_as_imports = true
force_sort_within_sections = true
known_first_party = ["checktick_app"]
skip = ["node_modules", "build", ".git", "staticfiles"]
