[tool.poetry]
name = "checktick"
version = "0.2.2"
description = "Secure, server-rendered survey platform for medical audit and research"
authors = ["CheckTick Maintainers <simon@eatyourpeas.co.uk>"]
readme = "README.md"
packages = [
    { include = "checktick_app" }
]

 [tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "~5.2.11"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
jinja2 = "^3.1.4"
django-cors-headers = "^4.4.0"
whitenoise = "^6.7.0"
django-axes = "^8.1.0"
django-ratelimit = "^4.1.0"
cryptography = "46.0.3"
itsdangerous = "^2.2.0"
pyyaml = "^6.0.2"
nhs-number = "^1.3.6"
djangorestframework = "^3.15.2"
django-csp = "^4.0"
gunicorn = "^22.0.0"
djangorestframework-simplejwt = "^5.3.1"
markdown = "^3.6"
pymdown-extensions = "^10.0"
pygments = "^2.18.0"
inflection = "^0.5.1"
uritemplate = "^4.1.1"
mozilla-django-oidc = "^4.0.1"
beautifulsoup4 = "^4.12.0"
requests = "^2.32.0"
hvac = "^2.4.0"
pillow = "^11.0.0"
qrcode = "^8.0"
django-otp = "^1.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"
pytest-xdist = "^3.5.0"
pytest-env = "^1.1.5"
pytest-playwright = "^0.6.2"
axe-playwright-python = "^0.1.5"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.4"}
virtualenv = "^20.36.1"
pip-audit = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Align isort with Black for consistent formatting locally and in CI
profile = "black"
line_length = 88
combine_as_imports = true
force_sort_within_sections = true
known_first_party = ["checktick_app"]
skip = ["node_modules", "build", ".git", "staticfiles"]
